cleaned notebooks and placed functions into src folder

--- a/lyrics-scraping.ipynb
+++ b/lyrics-scraping.ipynb
@@ -33,35 +33,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-10T23:36:36.767194Z",
-     "start_time": "2020-05-10T23:36:19.770324Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Searching for songs by Joey Bada$$...\n",
-      "\n",
-      "Song 1: \"Survival Tactics\"\n",
-      "Song 2: \"Paper Trail$\"\n",
-      "Song 3: \"Christ Conscious\"\n",
-      "\n",
-      "Reached user-specified song limit (3).\n",
-      "Done. Found 3 songs.\n"
-     ]
-    }
-   ],
-   "source": [
-    "artist = genius.search_artist(\"Joey Bada$$\", max_songs=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 100,
    "metadata": {
     "ExecuteTime": {
@@ -74,139 +45,6 @@
     "# Remove clutter from lyrics output\n",
     "genius.remove_section_headers = True\n",
     "genius.excluded_terms = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-10T23:53:29.528530Z",
-     "start_time": "2020-05-10T23:52:43.941629Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Searching for songs by Lil Wayne...\n",
-      "\n",
-      "Song 1: \"Love Me\"\n",
-      "Song 2: \"Believe Me\"\n",
-      "Song 3: \"Mona Lisa\"\n",
-      "Song 4: \"6 Foot 7 Foot\"\n",
-      "Song 5: \"Rich As Fuck\"\n",
-      "Song 6: \"Mirror\"\n",
-      "Song 7: \"She Will\"\n",
-      "Song 8: \"A Milli\"\n",
-      "Song 9: \"Don’t Cry\"\n",
-      "Song 10: \"Blunt Blowin’\"\n",
-      "Song 11: \"No Worries\"\n",
-      "Song 12: \"Uproar\"\n",
-      "Song 13: \"Right Above It\"\n",
-      "\"My Nigga (Remix)\" is not valid. Skipping.\n",
-      "Song 14: \"Drop the World\"\n",
-      "Song 15: \"John\"\n",
-      "\"Bandz a Make Her Dance (Remix)\" is not valid. Skipping.\n",
-      "Song 16: \"How to Love\"\n",
-      "\"Lollipop (Remix)\" is not valid. Skipping.\n",
-      "Song 17: \"Dedicate\"\n",
-      "Song 18: \"Mr. Carter\"\n",
-      "Song 19: \"My Homies Still\"\n",
-      "Song 20: \"God Bless Amerika\"\n",
-      "\n",
-      "Reached user-specified song limit (20).\n",
-      "Done. Found 20 songs.\n",
-      "Lil Wayne, 20 songs\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Example to see what the titles of a few songs look like\n",
-    "artist = genius.search_artist(\"Lil Wayne\", sort='popularity', max_songs=20,\n",
-    "                              get_full_info = False)\n",
-    "print(artist)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-10T22:49:39.632507Z",
-     "start_time": "2020-05-10T22:49:32.792800Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Searching for songs by Lil Wayne...\n",
-      "\n",
-      "Song 1: \"Love Me\"\n",
-      "\n",
-      "Reached user-specified song limit (1).\n",
-      "Done. Found 1 songs.\n",
-      "Wrote `Lyrics_LilWayne.json`\n"
-     ]
-    }
-   ],
-   "source": [
-    "artist.save_lyrics()\n",
-    "with open('Lyrics_LilWayne.json') as f:\n",
-    "    data = json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-10T22:52:58.545069Z",
-     "start_time": "2020-05-10T22:52:58.535320Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'annotation_count': 21,\n",
-       "  'api_path': '/songs/105686',\n",
-       "  'full_title': 'Love Me by\\xa0Lil\\xa0Wayne (Ft.\\xa0Drake & Future)',\n",
-       "  'header_image_thumbnail_url': 'https://images.genius.com/025852747d34bfec09080ad4c10b07b6.300x300x1.jpg',\n",
-       "  'header_image_url': 'https://images.genius.com/025852747d34bfec09080ad4c10b07b6.1000x1000x1.jpg',\n",
-       "  'id': 105686,\n",
-       "  'lyrics_owner_id': 137171,\n",
-       "  'lyrics_state': 'complete',\n",
-       "  'path': '/Lil-wayne-love-me-lyrics',\n",
-       "  'pyongs_count': 225,\n",
-       "  'song_art_image_thumbnail_url': 'https://images.genius.com/f73e134a449b314bbf3c04a9aadf0c23.300x300x1.jpg',\n",
-       "  'song_art_image_url': 'https://images.genius.com/f73e134a449b314bbf3c04a9aadf0c23.316x316x1.jpg',\n",
-       "  'stats': {'unreviewed_annotations': 0, 'hot': False, 'pageviews': 2876038},\n",
-       "  'title': 'Love Me',\n",
-       "  'title_with_featured': 'Love Me (Ft.\\xa0Drake & Future)',\n",
-       "  'url': 'https://genius.com/Lil-wayne-love-me-lyrics',\n",
-       "  'primary_artist': {'api_path': '/artists/4',\n",
-       "   'header_image_url': 'https://images.genius.com/0cc2fdca3461d34878a59e3791b35e7b.500x278x13.gif',\n",
-       "   'id': 4,\n",
-       "   'image_url': 'https://images.genius.com/b42bde67bc461dd55a00b577f33673bb.745x745x1.jpg',\n",
-       "   'is_meme_verified': True,\n",
-       "   'is_verified': True,\n",
-       "   'name': 'Lil Wayne',\n",
-       "   'url': 'https://genius.com/artists/Lil-wayne',\n",
-       "   'iq': 3962},\n",
-       "  'lyrics': 'I\\'m on that good kush and alcohol (Mike WiLL Made-It)\\nI got some down bitches I can call (What\\'s happenin\\'?)\\nI don\\'t know what I would do without y\\'all\\nI\\'ma ball \\'til the day I fall (I\\'ma ball, ball, ball)\\n\\nYeah, long as my bitches love me (Yeah, yeah; yeah, yeah)\\nI can give a fuck \\'bout no hater\\nLong as my bitches love me (Yeah, yeah; yeah, yeah; yeah, yeah)\\nYeah, I can give a fuck \\'bout no nigga\\nLong as these bitches love me\\n\\nUh, pussy-ass nigga, stop hatin\\'\\nLil Tunechi got that fire\\nAnd these hoes love me like Satan, man\\nYeah, fuck with me and get bodied\\nAnd all she eat is dick\\nShe\\'s on a strict diet, that\\'s my baby\\nWith no makeup, she a ten\\nAnd she the best with that head\\nEven better than Karrine\\nShe don\\'t want money\\nShe want the time that we could spend\\nShe said, \"\\'Cause I really need somebody\\nSo tell me you\\'re that somebody\"\\nGirl, I fuck who I want, and fuck who I don\\'t\\nGot that A1 credit, that\\'s that filet mignon\\nShe said, \"I never want to make you mad\\nI just want to make you proud\"\\nI said, \"Baby, just make me cum\\nThen don\\'t make a sound\"\\nSlick Tunechi\\n\\nI\\'m on that good kush and alcohol (Yeah)\\nI got some down bitches I can call (What\\'s happenin\\'?)\\nI don\\'t know what I would do without y\\'all\\nI\\'ma ball \\'til the day I fall (I\\'ma ball, ball, ball)\\n\\nYeah, long as my bitches love me (My bitches love me) (Yeah, yeah; yeah, yeah)\\nI can give a fuck \\'bout no hater\\nLong as my bitches love me (My bitches love me, my bitches love me, my bitches love me) (Yeah, yeah; yeah, yeah; yeah, yeah)\\nYeah, I can give a fuck \\'bout no nigga\\nLong as these bitches love me\\n\\nUh, real nigga, fuck these haters\\nThese hoes got pussies like craters\\nCan\\'t treat these hoes like ladies, man\\nPussy, money, weed, codeine\\nShe said my dick feel like morphine\\nI hope my name taste like sardines to these niggas\\nShe wake up, eat this dick\\nCall that breakfast in bed, 69, 96\\nI feel her heartbeat, I chest-to-chest with this bitch\\nNow turn around, face down; I\\'m arrestin\\' this bitch\\nYeah, all my bitches love me, and I love all my bitches\\nBut it\\'s like as soon as I cum, I come to my senses\\nAnd I would say these hoes\\' names\\nBut then I would be snitchin\\'\\nAnd these haters try to knock me\\nBut they can\\'t knock me off the hinges\\nLil Tunechi\\n\\nI\\'m on that good kush and alcohol (Yeah)\\nI got some down bitches I can call (What\\'s happenin\\'?)\\nI don\\'t know what I would do without y\\'all (I don\\'t know what I would do without y\\'all)\\nI\\'ma ball \\'til the day I fall (I\\'ma ball, ball, ball) (I\\'ma ball)\\n\\nYeah, long as my bitches love me (My bitches love me) (Yeah, yeah; yeah, yeah)\\nI can give a fuck \\'bout no hater\\nLong as my bitches love me (My bitches love me, my bitches love me, my bitches love me) (Yeah, yeah; yeah, yeah; yeah, yeah)\\nYeah, I can give a fuck \\'bout\\n\\nI lost a few good bitches, met some more bad bitches\\nAnd I be schooling them niggas, pose for your class picture\\nNow kiss my ass if you hatin\\', I\\'m getting ass, or I\\'m skatin\\'\\nI lost a few good bitches, met some more bad bitches\\nAnd I be schooling them niggas, pose for your class picture\\nNow kiss my ass if you hatin\\', I\\'m getting ass, or I\\'m skatin\\'\\nBitch\\n\\nI\\'m on that good kush and alcohol (Tunech)\\nI got some down bitches I can call (What\\'s happenin\\'?)\\nI don\\'t know what I would do without y\\'all (I don\\'t know what I would do without y\\'all)\\nI\\'ma ball \\'til the day I fall (I\\'ma ball, ball, ball) (I\\'ma ball)\\n\\nYeah, long as my bitches love me (My bitches love) (Yeah, yeah; yeah, yeah)\\nI can give a fuck \\'bout no hater\\nLong as my bitches love me (My bitches love me, my bitches love me, my bitches love me) (Yeah, yeah; yeah, yeah; yeah, yeah)\\nYeah, I can give a fuck \\'bout no nigga (Yeah)\\nLong as these bitches love me'}]"
-      ]
-     },
-     "execution_count": 77,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data['songs']"
    ]
   },
   {
@@ -246,31 +84,6 @@
     "                'Chief Keef', 'Earl Sweatshirt', 'Rapsody', 'Mac Miller',\n",
     "                'Trina', 'Cardi B', 'Action Bronson', 'The Roots',\n",
     "                'Maxo Kream', 'Brockhampton', 'Smino', 'Big KRIT'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-11T21:11:18.938543Z",
-     "start_time": "2020-05-11T21:11:18.930728Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(set(rapper_list)) == len(rapper_list)"
    ]
   },
   {
@@ -474,18 +287,11 @@
    ],
    "source": [
     "# Looping thru artists, grabbing the bulk of their discographies, and saving as JSONs\n",
-    "for rapper in rapper_list[23:]:\n",
+    "for rapper in rapper_list:\n",
     "    artist = genius.search_artist(rapper, sort='popularity',\n",
     "                                  get_full_info = True)\n",
     "    artist.save_lyrics()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
